--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,27 +1,23 @@
-name: Build image
+name: Build Docker Image
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-
-env:
-  REGISTRY: ghcr.io # Only used for labeling, if you want to push it make sure you have permissions to push.
-  IMAGE_NAME: ${{ github.repository   }}
+push:
+branches: [ main ]
+pull_request:
 
 jobs:
-  build-image:
-    runs-on: ubuntu-latest
+build:
+runs-on: ubuntu-latest
+steps:
+- name: Checkout code
+uses: actions/checkout@v3
 
-    permissions:
-      contents: read
+- name: Log in to GitHub Container Registry
+uses: docker/login-action@v2
+with:
+registry: ghcr.io
+username: ${{ github.actor }}
+password: ${{ secrets.GITHUB_TOKEN }}
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      # TODO: Maybe there's an action that does this for us.
+- name: Build Docker image
+run: docker build -t ghcr.io/${{ github.repository }}:latest .
